# nmea-gps-emulator

./: .gitignore  LICENCE  README.md  pyproject.toml  start.sh  start_gui.sh
src/nmea_gps_emulator/: __init__.py  __main__.py  custom_thread.py  distance.py  gbg_log.json  gbg_stream.json  main.py  main_crs.py  main_gui.py  main_qt.py  nmea_gps.py  nmea_utils.py  oldinit.py  poi.json  test_nmea.py  utils.py
src/nmea_gps_emulator/confs/: gbg_log.json  gbg_stream.json
src/nmea_gps_emulator/pois/: poi.json  poi_test.json
src/nmea_gps_emulator_ankars/: __init__.py  custom_thread.py  main.py  nmea_gps.py  test_nmea.py  utils.py
