[project]
name = "nmea-gps-emulator-ankars"
version = "0.1.1"
description = "GNSS Emulator for serial or network output"
author = "Niclas Ankar <niclasankar@outlook.com>"
dependencies = [
    "psutil>=5.8.0",
    "pyproj>=3.6.0",
    "pyserial>=3.5",
    "certifi==2024.6.2",
]
readme = "README.md"
requires-python = ">= 3.8"
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nmea_gps_emulator_ankars"]

[scripts]
start-emu = "__init__:hello"
start-main = "main:run"
