[project]
name = "nmea-gps-emulator"
version = "0.2.0"
description = "GNSS Emulator for serial, file or network output"
author = "Niclas Ankar <niclasankar@outlook.com>"
dependencies = [
    "psutil>=5.8.0",
    "pyproj>=3.6.0",
    "pyserial>=3.5",
    "certifi==2024.6.2",
    "pygeomag==1.0.2",
]
readme = "README.md"
requires-python = ">= 3.12"
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nmea_gps_emulator"]

[scripts]
start-main = "main:run"
