[project]
name = "nmea-gps-emulator"
version = "0.9.1"
description = "GNSS Emulator for serial, file or network output"
author = "Niclas Ankar <niclasankar@outlook.com>"
keywords = ["gps", "emulator", "nmea", "gnss"]
dependencies = [
    "psutil>=5.8.0",
    "pyproj>=3.7.0",
    "pyserial>=3.5",
    "certifi>=2025.01.31",
    "pygeomag==1.1.0",
    "timezonefinder>=6",
    "pytz>=2023.4",
    "PySide6>=6.7"
]
readme = "README.md"
requires-python = ">= 3.10"
license = "MIT"

[project.urls]
Homepage = "https://github.com/niclasankar/nmea-gps-emulator"
Documentation = "https://github.com/niclasankar/nmea-gps-emulator/README.md"
Repository = "https://github.com/niclasankar/nmea-gps-emulator/nmea-gps-emulator.git"
Issues = "https://github.com/niclasankar/nmea-gps-emulator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nmea_gps_emulator"]

[scripts]
start-main = "main:run"
